--- a/src/index.html
+++ b/src/index.html
@@ -1,33 +1,73 @@
 <html>
-  <head>
-    <link
-      rel="stylesheet"
-      href="<%=htmlWebpackPlugin.files.chunks.main.css %>"
-    />
-  </head>
 
-  <body>
-    <div class="main-wrapper">
-      <section class="view catagories-view">
-        <header class="view__heading-wrapper">
-          <h1 class="view__heading-text"></h1>
-        </header>
-        <div class="view__content">
-          <ul class="categories-list">
-            <li class="categories-list__item category-card">
-              <img class="category-card__poster" src="" alt="" />
-              <div class="category-card__title-container">
-                <p class="category-card__title-text"></p>
-              </div>
-            </li>
-          </ul>
+<head>
+  <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.main.css %>" />
+</head>
+
+<body>
+  <div class="main-wrapper">
+    <section class="view catagories-view">
+      <header class="view__heading-wrapper">
+        <h1 class="view__heading-text">
+          Shopping Cart - Make Purchases Right Now!
+        </h1>
+        <div class="view__cart shopping-cart">
+          <div class="shopping-cart__icon"></div>
+          <span class="shopping-cart__summary"></span>
         </div>
-      </section>
-      <section class="view goods-view" style="display: none"></section>
-      <section class="view cart-view" style="display: none"></section>
+      </header>
+      <div class="view__content">
+        <ul class="categories-list">
+          <li class="categories-list__item category-card one-to-two">
+            <img class="category-card__poster " src="assets/images/image 2x1.5.png" alt="" />
+            <div class="category-card__title-container">
+              <p class="category-card__title-text">T-Shirts</p>
+            </div>
+          </li>
+          <li class="categories-list__item category-card">
+            <img class="category-card__poster" src="assets/images/image 1x1.png" alt="" />
+            <div class="category-card__title-container">
+              <p class="category-card__title-text">T-Shirts</p>
+            </div>
+          </li>
+          <li class="categories-list__item category-card">
+            <img class="category-card__poster" src="assets/images/image 1x1.5.png" alt="" />
+            <div class="category-card__title-container">
+              <p class="category-card__title-text">T-Shirts</p>
+            </div>
+          </li>
+          <li class="categories-list__item category-card">
+            <img class="category-card__poster" src="assets/images/image 1x1.png" alt="" />
+            <div class="category-card__title-container">
+              <p class="category-card__title-text">T-Shirts</p>
+            </div>
+          </li>
+          <li class="categories-list__item category-card">
+            <img class="category-card__poster" src="assets/images/image 1x1.png" alt="" />
+            <div class="category-card__title-container">
+              <p class="category-card__title-text">T-Shirts</p>
+            </div>
+          </li>
+          <li class="categories-list__item category-card">
+            <img class="category-card__poster" src="assets/images/image 1x1.png" alt="" />
+            <div class="category-card__title-container">
+              <p class="category-card__title-text">T-Shirts</p>
+            </div>
+          </li>
+          <li class="categories-list__item category-card">
+            <img class="category-card__poster" src="assets/images/image 1x1.png" alt="" />
+            <div class="category-card__title-container">
+              <p class="category-card__title-text">T-Shirts</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="view goods-view" style="display: none"></section>
+    <section class="view cart-view" style="display: none"></section>
+  </div>
 
-    </div>
+  <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
+</body>
 
-    <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
-  </body>
 </html>
