upd(*): grid layout

--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,15 @@
         </div>
       </header>
       <div class="view__content">
-        <ul class="categories-list">
-          <li class="categories-list__item category-card one-to-two">
+        <ul class="list categories-list">
+          <li class="categories-list__item categories-list__item--1x2 category-card">
             <img class="category-card__poster " src="assets/images/image 2x1.5.png" alt="" />
+            <div class="category-card__title-container">
+              <p class="category-card__title-text">T-Shirts</p>
+            </div>
+          </li>
+          <li class="categories-list__item category-card">
+            <img class="category-card__poster" src="assets/images/image 1x1.5.png" alt="" />
             <div class="category-card__title-container">
               <p class="category-card__title-text">T-Shirts</p>
             </div>
@@ -31,7 +37,31 @@
             </div>
           </li>
           <li class="categories-list__item category-card">
-            <img class="category-card__poster" src="assets/images/image 1x1.5.png" alt="" />
+            <img class="category-card__poster" src="assets/images/image 1x1.png" alt="" />
+            <div class="category-card__title-container">
+              <p class="category-card__title-text">T-Shirts</p>
+            </div>
+          </li>
+          <li class="categories-list__item category-card">
+            <img class="category-card__poster" src="assets/images/image 1x1.png" alt="" />
+            <div class="category-card__title-container">
+              <p class="category-card__title-text">T-Shirts</p>
+            </div>
+          </li>
+          <li class="categories-list__item category-card">
+            <img class="category-card__poster" src="assets/images/image 1x1.png" alt="" />
+            <div class="category-card__title-container">
+              <p class="category-card__title-text">T-Shirts</p>
+            </div>
+          </li>
+          <li class="categories-list__item category-card categories-list__item--1x2 ">
+            <img class="category-card__poster" src="assets/images/image 1x2.png" alt="" />
+            <div class="category-card__title-container">
+              <p class="category-card__title-text">T-Shirts</p>
+            </div>
+          </li>
+          <li class="categories-list__item categories-list__item--2x1 category-card">
+            <img class="category-card__poster" src="assets/images/image 2x1.png" alt="" />
             <div class="category-card__title-container">
               <p class="category-card__title-text">T-Shirts</p>
             </div>
