--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         </h1>
         <div class="view__cart shopping-cart">
           <div class="shopping-cart__icon"></div>
-          <span class="shopping-cart__summary"></span>
+          <span class="shopping-cart__summary">$250</span>
         </div>
       </header>
       <div class="view__content">
